--- a/src/assets/styles/icon.scss
+++ b/src/assets/styles/icon.scss
@@ -1,1 +1,9 @@
-@import url("//at.alicdn.com/t/font_1271411_61bmnmxw90b.css");
+//@import url("//at.alicdn.com/t/font_1294407_bfmi5hrlmvc.css");
+
+.icon {
+  width: 2em;
+  height: 2em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
