--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -14,9 +14,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   background-color: $color-background;
   color: $color-text;
-  margin: 0 auto;
-  min-width: $min-width;
-  max-width: $max-width;
+  width: 100%;
 }
 
 html {
@@ -24,123 +22,99 @@ html {
   font-size: $html-size / 3.75 + vw;
 }
 
-@media screen and (max-width: 320px) {
+.container {
+  max-width: $max-width;
+  margin: 0 auto;
+  padding: 0 .3rem;
+}
+
+@media (max-width: 320px) {
   html {
     font-size: $html-size * 320 / 375 + px;
   }
 }
 
-@media screen and (min-width: 540px) {
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
   html {
     font-size: $html-size * 540 / 375 + px;
   }
 }
 
-@media screen and (min-width: 1080px) {
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
   html {
     font-size: $html-size + px;
   }
 }
 
-img {
-  user-select: none;
-}
-
-#root {
-  margin: 60px 0;
-  width: 100%;
-  overflow: hidden;
-}
-
-.default-title {
-  font-size: $font-size-large-x;
-  margin-bottom: .4rem;
-
-  span {
-    font-weight: bold;
-
-    &.alias {
-      color: $color-text-d;
-      margin-left: .2rem;
-      font-size: $font-size-large;
-    }
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
   }
 }
 
-.default-switch {
-  @include flex();
-  justify-content: space-around;
-  margin-bottom: .5rem;
-
-  span {
-    line-height: 1;
-    display: block;
-    padding: .15rem .4rem;
-    background-color: $color-background-q;
-    border-radius: 10rem;
-    transition: background-color .2s, color .2s;
-
-    &.cur {
-      background-color: $color-theme;
-      color: $color-background;
-    }
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
   }
 }
 
-.course {
-  @include flex();
-  transition: color .5s;
-
-  .item {
-    width: 25%;
-    text-align: center;
-    color: $color-text;
-
-    .icon {
-      display: block;
-      width: 1rem;
-      height: 1rem;
-      margin: 0 auto .2rem auto;
-      line-height: 2;
-      font-size: $font-size-large-xx;
-      background-color: $color-background-q;
-      border-radius: 50px;
-    }
-
-    .alias {
-      color: $color-text-l;
-      font-size: $font-size-small;
-    }
-
-    &:focus {
-      color: $color-theme;
-
-      .icon {
-        background-color: $color-theme;
-        color: $color-background;
-      }
-
-      .alias {
-        color: $color-theme;
-      }
-    }
-  }
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .slick-dots {
-  bottom: .3rem;
+  bottom: .2rem;
 
   li {
+    width: 30px;
+    height: 4px;
+
+    button {
+      width: 0;
+      height: 0;
+      padding: 0;
+      margin-right: 4px;
+
+      &:before {
+        content: '';
+        width: 100%;
+        height: 100%;
+        background-color: $color-background-dd;
+      }
+    }
+
     &.slick-active {
       button {
-        width: .4rem;
-        height: .4rem;
-
         &:before {
-          font-size: $font-size-small-s;
-          color: $color-theme;
+          background-color: $color-theme;
         }
       }
     }
   }
+}
+
+.slick-prev {
+  left: 10px;
+  z-index: 101;
+}
+
+.slick-next {
+  right: 10px;
+  z-index: 101;
+}
+
+.box-shadow {
+  box-shadow: 0 0 20px -5px rgba($color-text-l, .2);
+}
+
+.mask {
+  @include mask();
 }
