--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -51,7 +51,7 @@ table {
 /* custom */
 
 a {
-  color: #7e8c8d;
+  color: inherit;
   text-decoration: none;
   -webkit-backface-visibility: hidden;
 }
@@ -68,4 +68,12 @@ input {
 body {
   -webkit-text-size-adjust: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+button {
+  margin: 0;
+  padding: 0;
+  border: 1px solid transparent;
+  outline: none;
+  user-select: none;
 }
