--- a/src/layouts/ArticleList/index.scss
+++ b/src/layouts/ArticleList/index.scss
@@ -26,20 +26,28 @@
         position: relative;
         z-index: 1;
 
+        &::after {
+          content: '';
+          display: block;
+          padding-top: 20%;
+        }
+
         .image {
-          position: relative;
-          font-size: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 40%;
+          height: 100%;
+          background-color: $color-background-q;
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          font-size: 0;
           border-radius: $border-radius-small;
           overflow: hidden;
           z-index: 1;
           @media (min-width: 992px) {
             width: 4.5rem;
-          }
-
-          img {
-            max-width: 100%;
-            transition: transform 1s;
           }
 
           &:hover {
