--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -8,13 +8,28 @@ header.header {
   }
 
   .logo {
+    position: relative;
     display: block;
     float: left;
-    padding: .2rem 0;
+    width: 2rem;
     font-size: 0;
+    margin-top: .2rem;
 
-    img {
-      width: 2rem;
+    &::after {
+      content: '';
+      display: block;
+      padding-top: 29%;
+    }
+
+    .image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
   }
 
