--- a/src/layouts/Side/index.scss
+++ b/src/layouts/Side/index.scss
@@ -167,6 +167,7 @@
       left: 0;
       width: 100%;
       height: 100%;
+      background-color: $color-background-q;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -292,6 +293,12 @@
       .background {
         position: relative;
 
+        &::after {
+          content: '';
+          display: block;
+          padding-top: 65%;
+        }
+
         .index {
           width: 1rem;
           color: $color-background;
@@ -335,15 +342,18 @@
         }
 
         .image {
-          height: 4rem;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: $color-background-q;
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
           transition: transform 1s;
           border-radius: $border-radius-small;
           overflow: hidden;
-
-          img {
-            max-width: 100%;
-            transition: transform 1s;
-          }
         }
 
         &:hover {
@@ -372,6 +382,11 @@
       .column {
         position: relative;
 
+        &::after {
+          content: '';
+          display: block;
+          padding-top: 24%;
+        }
 
         .index {
           position: absolute;
@@ -391,10 +406,16 @@
         }
 
         .image {
+          position: absolute;
+          top: 0;
+          left: 0;
           width: 2rem;
-          height: 1.4rem;
+          height: 100%;
+          background-color: $color-background-q;
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
           border-radius: $border-radius-small;
-          position: relative;
           overflow: hidden;
           z-index: 1;
 
