--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -23,6 +23,7 @@
           left: 0;
           width: 100%;
           height: 100%;
+          background-color: $color-background-q;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat;
