--- a/src/layouts/Side/index.scss
+++ b/src/layouts/Side/index.scss
@@ -192,6 +192,7 @@
         font-size: $font-size-medium-x;
         height: 1rem;
         margin-top: .4rem;
+        overflow: hidden;
       }
 
       .badge {
