--- a/src/views/NotFound/index.scss
+++ b/src/views/NotFound/index.scss
@@ -1,7 +1,7 @@
 @import "../../assets/styles/mixin";
 
 .not-found {
-  .main {
+  .not-found-main {
     min-height: 800px;
     padding-top: 300px;
     text-align: center;
