--- a/src/views/Article/index.scss
+++ b/src/views/Article/index.scss
@@ -70,6 +70,10 @@
         font-size: $font-size-medium-x;
       }
 
+      img {
+        max-width: 100%;
+      }
+
       .tag {
         margin: .8rem 0 .4rem;
 
