--- a/src/layouts/ArticleList/index.scss
+++ b/src/layouts/ArticleList/index.scss
@@ -6,9 +6,11 @@
   .article-list {
     .item {
       position: relative;
-      margin-bottom: .8rem;
+      margin-bottom: .4rem;
+      margin-bottom: .4rem;
       background-color: $color-background;
       @media (min-width: 992px) {
+        margin-bottom: .8rem;
         padding-right: .4rem;
       }
 
@@ -26,54 +28,22 @@
         position: relative;
         z-index: 1;
 
-        &::after {
-          content: '';
+        .image-box {
+          position: relative;
+          width: 33.333333%;
           display: block;
-          padding-top: 20%;
-        }
-
-        .image {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 40%;
-          height: 100%;
-          background-color: $color-background-q;
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          font-size: 0;
-          border-radius: $border-radius-small;
-          overflow: hidden;
-          z-index: 1;
-          @media (min-width: 992px) {
-            width: 4.5rem;
-          }
-
-          &:hover {
-            img {
-              transform: scale(1.1);
-            }
-          }
         }
 
         .info {
           position: absolute;
           top: 0;
           left: 0;
-          padding-left: 43%;
+          padding-left: 36%;
           width: 100%;
           height: 100%;
-          @media (min-width: 992px) {
-            padding-left: 5rem;
-          }
 
           .title {
             font-size: $font-size-medium;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
             @media (min-width: 992px) {
               font-size: $font-size-large;
               margin-top: .16rem;
@@ -85,7 +55,7 @@
             color: $color-text-d;
             margin-top: .16rem;
             @media (min-width: 992px) {
-              display: block;
+              display: -webkit-box;
             }
           }
 
@@ -93,11 +63,10 @@
             font-size: $font-size-small;
             color: $color-text-l;
             position: absolute;
-            left: 43%;
+            left: 36%;
             right: 0;
             bottom: 0;
             @media (min-width: 992px) {
-              left: 5rem;
               bottom: .16rem;
             }
 
