--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -58,15 +58,42 @@ header.header {
       transform: translateX(0);
     }
 
+    .hide {
+      margin: .2rem 0;
+      text-align: right;
+      color: $color-text-l;
+
+      .btn {
+        display: inline-block;
+        padding: .2rem .4rem;
+      }
+    }
+
     .item {
       display: block;
       border-bottom: 1px solid $color-background-q;
-      padding: .2rem 1rem .2rem .2rem;
+      padding: .2rem 1rem .2rem .4rem;
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        right: .4rem;
+        width: 6px;
+        height: 6px;
+        border-bottom: 1px solid $color-text-l;
+        border-right: 1px solid $color-text-l;
+        transform: translate3d(0, -50%, 0) rotate(-45deg);
+      }
 
       @media (min-width: 992px) {
         display: inline-block;
         border: none;
         padding: .2rem;
+        &::after {
+          content: none;
+        }
       }
     }
   }
