--- a/src/layouts/Side/index.scss
+++ b/src/layouts/Side/index.scss
@@ -186,6 +186,7 @@
       bottom: 0;
       width: 100%;
       background-image: linear-gradient(-180deg, transparent 0, rgba($color-background-k, .65) 100%);
+      z-index: 11;
 
 
       .title {
@@ -297,7 +298,7 @@
         &::after {
           content: '';
           display: block;
-          padding-top: 65%;
+          padding-top: 66.66666%;
         }
 
         .index {
@@ -310,7 +311,7 @@
           position: absolute;
           top: 0;
           left: -.2rem;
-          z-index: 1;
+          z-index: 11;
 
           &::after {
             content: '';
@@ -342,27 +343,6 @@
           }
         }
 
-        .image {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: $color-background-q;
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          transition: transform 1s;
-          border-radius: $border-radius-small;
-          overflow: hidden;
-        }
-
-        &:hover {
-          img {
-            transform: scale(1.1);
-          }
-        }
-
         .text-wrapper {
           background-image: linear-gradient(-180deg, transparent 13%, rgba($color-background-k, .65) 97%);
           position: absolute;
@@ -372,6 +352,7 @@
           color: $color-background;
           padding: 0 .2rem;
           border-radius: $border-radius-small;
+          z-index: 11;
 
           .text {
             position: absolute;
@@ -383,12 +364,6 @@
       .column {
         position: relative;
 
-        &::after {
-          content: '';
-          display: block;
-          padding-top: 24%;
-        }
-
         .index {
           position: absolute;
           width: .5rem;
@@ -397,7 +372,7 @@
           text-align: center;
           border-top-left-radius: $border-radius-small;
           font-weight: bold;
-          z-index: 2;
+          z-index: 11;
         }
 
         &:nth-child(3) {
@@ -406,42 +381,21 @@
           }
         }
 
-        .image {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 2rem;
+        .image-box {
+          position: relative;
+          float: left;
+          width: 33.33333%;
           height: 100%;
-          background-color: $color-background-q;
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          border-radius: $border-radius-small;
           overflow: hidden;
           z-index: 1;
-
-          img {
-            max-width: 100%;
-            transition: transform 1s;
-          }
-
-          &:hover {
-            img {
-              transform: scale(1.1);
-            }
-          }
         }
 
         .text-wrapper {
           position: absolute;
           top: 0;
-          padding-left: 2.2rem;
+          padding-left: 36%;
           width: 100%;
           height: 100%;
-
-          .title {
-            @include no-wrap();
-          }
 
           .time {
             font-size: $font-size-small;
