--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -39,6 +39,7 @@ header.header {
     right: 0;
     width: 60%;
     height: 100vh;
+    line-height: 1;
     background-color: $color-background;
     font-size: $font-size-medium-x;
     float: left;
@@ -56,9 +57,14 @@ header.header {
 
     &.show {
       transform: translateX(0);
+
+      .hide {
+        display: block;
+      }
     }
 
     .hide {
+      display: none;
       margin: .2rem 0;
       text-align: right;
       color: $color-text-l;
@@ -95,6 +101,16 @@ header.header {
           content: none;
         }
       }
+    }
+  }
+
+  .search-btn {
+    font-size: $font-size-medium-x;
+    padding: .2rem;
+    float: left;
+    line-height: 1;
+    @media (min-width: 992px) {
+      font-size: $font-size-medium;
     }
   }
 
