--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -73,7 +73,8 @@ body {
 button {
   margin: 0;
   padding: 0;
-  border: 1px solid transparent;
+  background: none;
+  border: none;
   outline: none;
   user-select: none;
 }
