--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -58,9 +58,11 @@
           }
         }
 
-        &:hover {
-          img {
-            transform: scale(1.1);
+        @media (min-width: 992px) {
+          &:hover {
+            img {
+              transform: scale(1.1);
+            }
           }
         }
       }
