--- a/src/layouts/Header/index.scss
+++ b/src/layouts/Header/index.scss
@@ -1,141 +1,217 @@
 @import "../../assets/styles/mixin";
 
-header.header {
-  padding: .2rem 0;
+.header-wrapper {
+  background-color: $color-background;
   box-shadow: 0 5px 40px 0 rgba(17, 58, 93, 0.1);
-  @media (min-width: 992px) {
-    padding: .4rem 0;
-  }
+  position: relative;
 
-  .logo {
-    position: relative;
-    display: block;
-    float: left;
-    width: 2rem;
-    font-size: 0;
-    margin-top: .2rem;
-
-    &::after {
-      content: '';
-      display: block;
-      padding-top: 29%;
-    }
-
-    .image {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-  }
-
-  nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 60%;
-    height: 100vh;
-    line-height: 1;
+  .header {
     background-color: $color-background;
-    font-size: $font-size-medium-x;
-    float: left;
-    margin-left: 1rem;
-    transform: translateX(100%);
-    transition: 300ms ease;
-    z-index: 10;
+    padding: .2rem 0;
+    position: relative;
+    font-size: 0;
+    z-index: 102;
+    @media (max-width: 991px) {
+      text-align: center;
+    }
     @media (min-width: 992px) {
-      width: auto;
-      height: auto;
-      font-size: $font-size-medium;
+      padding: .4rem .3rem;
+    }
+
+    .logo {
       position: relative;
-      transform: translateX(0);
-    }
-
-    &.show {
-      transform: translateX(0);
-
-      .hide {
-        display: block;
+      display: inline-block;
+      width: 2rem;
+      margin: .1rem 0;
+      @media (min-width: 992px) {
+        float: left;
       }
-    }
-
-    .hide {
-      display: none;
-      margin: .2rem 0;
-      text-align: right;
-      color: $color-text-l;
-
-      .btn {
-        display: inline-block;
-        padding: .2rem .4rem;
-      }
-    }
-
-    .item {
-      display: block;
-      border-bottom: 1px solid $color-background-q;
-      padding: .2rem 1rem .2rem .4rem;
-      position: relative;
 
       &::after {
         content: '';
-        position: absolute;
-        top: 50%;
-        right: .4rem;
-        width: 6px;
-        height: 6px;
-        border-bottom: 1px solid $color-text-l;
-        border-right: 1px solid $color-text-l;
-        transform: translate3d(0, -50%, 0) rotate(-45deg);
+        display: block;
+        padding-top: 29%;
       }
 
+      .image {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    }
+
+    nav {
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 60%;
+      height: 100vh;
+      line-height: 1;
+      background-color: $color-background;
+      font-size: $font-size-medium-x;
+      text-align: left;
+      float: left;
+      margin-left: 1rem;
+      transform: translateX(100%);
+      transition: 300ms ease;
+      z-index: 10;
       @media (min-width: 992px) {
-        display: inline-block;
-        border: none;
-        padding: .2rem;
+        width: auto;
+        height: auto;
+        font-size: $font-size-medium;
+        position: relative;
+        transform: translateX(0);
+      }
+
+      &.show {
+        transform: translateX(0);
+
+        .hide {
+          display: block;
+        }
+      }
+
+      .hide {
+        display: none;
+        margin: .2rem 0;
+        text-align: right;
+        color: $color-text-l;
+
+        .btn {
+          display: inline-block;
+          padding: .2rem .4rem;
+        }
+      }
+
+      .item {
+        display: block;
+        border-bottom: 1px solid $color-background-q;
+        padding: .2rem 1rem .2rem .4rem;
+        position: relative;
+
         &::after {
-          content: none;
+          content: '';
+          position: absolute;
+          top: 50%;
+          right: .4rem;
+          width: 6px;
+          height: 6px;
+          border-bottom: 1px solid $color-text-l;
+          border-right: 1px solid $color-text-l;
+          transform: translate3d(0, -50%, 0) rotate(-45deg);
+        }
+
+        @media (min-width: 992px) {
+          display: inline-block;
+          border: none;
+          padding: .2rem;
+          &::after {
+            content: none;
+          }
         }
       }
     }
-  }
 
-  .search-btn {
-    font-size: $font-size-medium-x;
-    padding: .2rem;
-    float: left;
-    line-height: 1;
-    @media (min-width: 992px) {
+    .search-btn {
       font-size: $font-size-medium;
+      color: $color-text;
+      float: left;
+      line-height: 1;
+      cursor: pointer;
+      transition: transform .3s;
+      @media (max-width: 991px) {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translate3d(0, -50%, 0);
+        padding: .2rem .3rem;
+      }
+      @media (min-width: 992px) {
+        padding: .15rem;
+        font-size: $font-size-small-s;
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+    }
+
+    .mask {
+      visibility: hidden;
+      opacity: 0;
+      @include mask($position: fixed);
+      transition: 300ms ease;
+      z-index: 9;
+
+      &.show {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+
+    .nav-button {
+      position: absolute;
+      top: 50%;
+      right: 0;
+      transform: translate3d(0, -50%, 0);
+      text-align: right;
+      padding: .2rem .3rem;
+      font-size: $font-size-medium;
+      @media (min-width: 992px) {
+        display: none;
+      }
+
+      .icon {
+      }
     }
   }
 
-  .mask {
-    visibility: hidden;
-    opacity: 0;
-    @include mask($position: fixed);
-    transition: 300ms ease;
-    z-index: 9;
+  .search-wrapper {
+    position: absolute;
+    left: 0;
+    top: 120%;
+    width: 100%;
+    transition: all .3s;
+    opacity: 1;
+    z-index: 101;
 
-    &.show {
-      opacity: 1;
-      visibility: visible;
-    }
-  }
-
-  .nav-button {
-    display: block;
-    text-align: right;
-    padding: .2rem 0;
-    @media (min-width: 992px) {
-      display: none;
+    &.hide {
+      opacity: 0;
+      transform: translate3d(0, -120%, 0);
     }
 
-    .icon {
+    .search {
+      padding: .2rem;
+      background-color: $color-background;
+      box-shadow: 0 5px 40px 0 rgba(17, 58, 93, 0.1);
+      border-radius: $border-radius-small;
+      position: relative;
+
+      input {
+        width: 100%;
+        height: .8rem;
+      }
+
+      .deleteKeyword {
+        position: absolute;
+        top: 50%;
+        right: .5rem;
+        transform: translate3d(0, -50%, 0);
+        font-size: 0;
+
+        &.hide {
+          display: none;
+        }
+
+        .icon {
+          color: $color-text-l;
+          font-size: $font-size-small;
+        }
+      }
     }
   }
 }
